--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Todo list</title>
-  <link rel="stylesheet" href="./css/style.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://bootswatch.com/yeti/bootstrap.min.css" />
+  <link rel="stylesheet" href="./build/styles.css" />
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"> -->
+  <!-- <link rel="stylesheet" href="https://bootswatch.com/yeti/bootstrap.min.css" /> -->
 </head>
 <body>
   <div id="app"></div>
